crates/canvas-cli/tests/e2e/snapshots/config_get_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
3
--- stderr ---
