crates/canvas-cli/tests/e2e/snapshots/config_path_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": null,
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "path": "<scratch>/config/config.toml"
  },
  "schema": "canvas-cli/config@1",
  "warnings": []
}
