crates/canvas-cli/tests/e2e/snapshots/config_path_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
<scratch>/config/config.toml
--- stderr ---
