crates/canvas-cli/tests/e2e/snapshots/course_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
SYN-600  Synthetic Course
term: Synthetic Term
grade: C
<origin>/courses/60100
teacher: 

Synthetic exercise: sort the symbols X, Y, and Z.
--- stderr ---
