crates/canvas-cli/tests/e2e/snapshots/courses_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "courses",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "active",
      "source": "cache",
      "stale": false
    },
    {
      "complete": true,
      "count": 2,
      "dataset": "course_totals",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "cache",
      "stale": false
    }
  ],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "courses": [
      {
        "code": "SYN-600",
        "enrollment_state": "active",
        "grades": {
          "current_grade": "C",
          "current_score": 73.25,
          "final_grade": "C",
          "final_score": 73.25,
          "period": {
            "id": null,
            "mode": "all",
            "title": null
          }
        },
        "html_url": "<origin>/courses/60100",
        "id": "60100",
        "is_favorite": true,
        "name": "Synthetic Course",
        "restricted": false,
        "term": {
          "end_at": "2040-12-15T10:00:00Z",
          "id": "60010",
          "name": "Synthetic Term",
          "start_at": "2040-08-25T04:00:00Z"
        }
      }
    ]
  },
  "schema": "canvas-cli/courses@1",
  "warnings": []
}
