crates/canvas-cli/tests/e2e/snapshots/courses_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  CODE       NAME                TERM              GRADE  
  SYN-600    Synthetic Course    Synthetic Term    C      
--- stderr ---
